# authentik-worker-operator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  charmcraft.yaml  pyproject.toml  requirements.txt  tox.ini
.agents/instructions/: testing.instructions.md
.github/: .jira_sync_config.yaml  copilot-instructions.md
.github/workflows/: ci.yaml  on_schedule.yaml  promote.yaml  publish.yaml  release_libs.yaml  terraform_module.yaml
lib/charms/authentik_server/v0/: authentik_cluster.py
openspec/: config.yaml
openspec/changes/archive/2026-06-22-authentik-worker-core-fixes/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-authentik-worker-core-fixes/specs/authentik-cluster-lib/: spec.md
openspec/changes/archive/2026-06-22-authentik-worker-core-fixes/specs/charmcraft-config/: spec.md
openspec/changes/archive/2026-06-22-authentik-worker-core-fixes/specs/collect-status-logic/: spec.md
openspec/changes/archive/2026-06-22-authentik-worker-structural-alignment/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-authentik-worker-structural-alignment/specs/database-config-dataclass/: spec.md
openspec/changes/archive/2026-06-22-authentik-worker-structural-alignment/specs/pebble-lifecycle/: spec.md
openspec/changes/archive/2026-06-22-authentik-worker-structural-alignment/specs/proxy-config/: spec.md
openspec/changes/archive/2026-06-22-authentik-worker-structural-alignment/specs/utils/: spec.md
openspec/changes/archive/2026-06-22-authentik-worker-structural-alignment/specs/workload-service/: spec.md
openspec/changes/archive/2026-07-17-worker-conn-pool-configs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-17-worker-conn-pool-configs/specs/connection-pooling-and-task-signaling/: spec.md
openspec/specs/authentik-cluster-lib/: spec.md
openspec/specs/charmcraft-config/: spec.md
openspec/specs/collect-status-logic/: spec.md
openspec/specs/connection-pooling-and-task-signaling/: spec.md
openspec/specs/database-config-dataclass/: spec.md
openspec/specs/pebble-lifecycle/: spec.md
openspec/specs/proxy-config/: spec.md
openspec/specs/utils/: spec.md
openspec/specs/workload-service/: spec.md
src/: charm.py  configs.py  constants.py  env_vars.py  exceptions.py  integrations.py  services.py  utils.py
src/loki_alert_rules/: rules.yaml
src/prometheus_alert_rules/: rules.yaml
terraform/: MODULE_SPECS.md  main.tf  outputs.tf  terraform.tf  variables.tf
tests/integration/: conftest.py  constants.py  test_charm.py  utils.py
tests/unit/: conftest.py  test_charm.py  test_configs.py  test_integrations.py  test_services.py
